--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <header> <p>hola hola</p></header>
     <h1>hola</h1>
     <p>control de versiones</p>
     <p>branch</p>
