--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>hola</h1>
     <p>control de versiones</p>
     <p>branch</p>
+    <footer> este es el footer</footer>
     
 </body>
 </html>
